--- a/Rukyou_Chat/Rukyou_Chat.csproj
+++ b/Rukyou_Chat/Rukyou_Chat.csproj
@@ -95,6 +95,7 @@
     <Compile Include="View\ChatBox.xaml.cs">
       <DependentUpon>ChatBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\list.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
